--- a/views/be_mission_data.xml
+++ b/views/be_mission_data.xml
@@ -23,5 +23,16 @@
             <field name="implementation">standard</field>
         </record>
 
+        <record model="ir.sequence" id="be_mission_ord">
+            <field name="name">Mission Numero</field>
+            <field name="code">mission.ordinaire</field>
+            <field name="active">TRUE</field>
+            <field name="prefix">MO</field>
+            <field name="number_increment">1</field>
+            <field name="number_next">1</field>
+            <field name="padding">3</field>
+            <field name="implementation">standard</field>
+        </record>
+
     </data>
 </odoo>
