--- a/views/views.xml
+++ b/views/views.xml
@@ -442,6 +442,78 @@
 
     <menuitem name="Frais billet avion" id="be_menu_reportin_ticket" parent="be_mission_report_teckit" action="reporting_ticket_action_window"/>
 
+    <!-- Voyage vacance -->
+    <!-- Treeview Voyage vacance -->
+    <record model="ir.ui.view" id="mission_voyage_vacance_treeview">
+      <field name="name">Voyage</field>
+      <field name="model">voyage.vacance</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="currency_id" invisible="1"/>
+          <field name="name" />
+          <field name="person_name" />
+          <field name="date_a" />
+          <field name="date_r" />
+          <field name="montant_b" widget="monetary"/>
+          <field name="montant_bm" widget="monetary"/>
+          <field name="montant_bmt" widget="monetary"/>
+          <field name="montant_total" sum="Total" widget="monetary"/>
+        </tree>
+      </field>
+    </record>
+
+    <!-- form view voyage vacance -->
+    <record id="form_view_voyage_vacance" model="ir.ui.view">
+      <field name="name">voyage_vacance_view_form</field>
+      <field name="model">voyage.vacance</field>
+      <field name="arch" type="xml">
+        <form string="Voyage">
+        <sheet>
+          <div class="oe_title">
+              <h1>
+                <field name="name" readonly="1"/>
+              </h1>
+            </div>
+          <group>
+            <group>
+              <field name="person_name"/>
+              <field name="trajet"/>
+              <field name="nature"/>
+            </group>
+            <group>
+              <field name="date_a"/>
+              <field name="date_r"/>
+
+            </group>
+          </group>
+          <group>
+            <group></group>
+            <group class="oe_subtotal_footer">
+              <field name="montant_b" widget="monetary"/>
+              <field name="montant_bm" widget="monetary"/>
+              <field name="montant_bmt" widget="monetary"/>
+              <field name="montant_total" widget="monetary"/>
+            </group>
+            <field name="currency_id" invisible="1"/>
+          </group>
+        </sheet>
+          <div class="oe_chatter">
+            <field name="message_follower_ids" widget="mail_followers"/>
+            <field name="message_ids" widget="mail_thread"/>
+          </div>
+        </form>
+      </field>
+    </record>
+
+    <!-- action voyage vacance -->
+    <record model="ir.actions.act_window" id="voyage_vacance_action_window">
+      <field name="name">Voyage Vacance</field>
+      <field name="res_model">voyage.vacance</field>
+      <field name="view_id" ref="mission_voyage_vacance_treeview"/>
+      <field name="view_mode">tree,form</field>
+    </record>
+
+    <menuitem name="Voyage Vacance" id="be_menu_voyage_vacance" parent="be_mission_report_teckit" action="voyage_vacance_action_window"/>
 
   </data>
 </odoo>
