--- a/views/mission.xml
+++ b/views/mission.xml
@@ -2,7 +2,7 @@
   <data>
 
     <!-- Top menu item -->
-    <menuitem name="Mission" id="be_mission" groups="base.group_user"/>
+    <menuitem name="Mission" id="be_mission" groups="base.group_user" sequence="10"/>
 
     <!-- menu categories -->
 
@@ -247,7 +247,7 @@
 
     <!-- Mession interne retour -->
     <record model="ir.actions.act_window" id="mission_interne_ret_action_window">
-      <field name="name">Mission retour étranger</field>
+      <field name="name">Mission étranger retour</field>
       <field name="res_model">mission.interne</field>
       <field name="view_id" ref="mission_interne_treeview"/>
       <field name="domain">[('mission', '=', 'interne_ret')]</field>
@@ -255,7 +255,7 @@
       <field name="view_mode">tree,form</field>
     </record>
 
-    <menuitem name="Mission retour étranger" id="be_mission_mission_int_retour" parent="be_mission_interne" action="mission_interne_ret_action_window"/>
+    <menuitem name="Mission étranger retour" id="be_mission_mission_int_retour" parent="be_mission_interne" action="mission_interne_ret_action_window"/>
 
     <!-- Mession Ordinaire -->
     <!-- treeview Mission Ordinaire-->
@@ -301,35 +301,42 @@
                 <field name="date_creation" />
                 <field name="date_exp" />
                 <field name="vehicule" />
-                <field name="biller" attrs="{'invisible':[('mission', 'not in',('ordinaire_all'))] }"/>
+
               </group>
             </group>
             <group attrs="{'invisible':[('vehicule', 'not in', 'oui')] }">
               <group>
                 <field name="n_chauffeur" />
                 <field name="chauffeur_cont" />
+                <field name="p_carburant" />
                 <field name="p_financier" />
               </group>
               <group>
                 <field name="matricule" />
                 <field name="duree_b" />
+                <field name="date_p_carburant" attrs="{'invisible':[('p_carburant', 'not in', 'oui')] }" />
                 <field name="date_pf" attrs="{'invisible':[('p_financier', 'not in', 'oui')] }" />
               </group>
             </group>
             <group attrs="{'invisible':[('mission', 'not in',('ordinaire_all'))] }">
               <group>
                 <field name="frais_m" />
+                <field name="equipement"/>
               </group>
               <group>
                 <field name="date_f" attrs="{'invisible':[('frais_m', 'not in', 'oui')] }"/>
+                <field name="equipement" attrs="{'invisible':[('equipement', 'not in', 'oui')] }"/>
               </group>
             </group>
             <group attrs="{'invisible':[('mission', 'not in',('ordinaire_ret'))] }">
               <group>
                 <field name="p_financier" />
+                <field name="p_equipement" />
               </group>
               <group>
                 <field name="date_pf" attrs="{'invisible':[('p_financier', 'not in', 'oui')] }" />
+                <field name="date_p_eq" attrs="{'invisible':[('p_equipement', 'not in', 'oui')] }" />
+
               </group>
             </group>
             <group>
@@ -441,79 +448,6 @@
     </record>
 
     <menuitem name="Frais billet avion" id="be_menu_reportin_ticket" parent="be_mission_report_teckit" action="reporting_ticket_action_window"/>
-
-    <!-- Voyage vacance -->
-    <!-- Treeview Voyage vacance -->
-    <record model="ir.ui.view" id="mission_voyage_vacance_treeview">
-      <field name="name">Voyage</field>
-      <field name="model">voyage.vacance</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="currency_id" invisible="1"/>
-          <field name="name" />
-          <field name="person_name" />
-          <field name="date_a" />
-          <field name="date_r" />
-          <field name="montant_b" widget="monetary"/>
-          <field name="montant_bm" widget="monetary"/>
-          <field name="montant_bmt" widget="monetary"/>
-          <field name="montant_total" sum="Total" widget="monetary"/>
-        </tree>
-      </field>
-    </record>
-
-    <!-- form view voyage vacance -->
-    <record id="form_view_voyage_vacance" model="ir.ui.view">
-      <field name="name">voyage_vacance_view_form</field>
-      <field name="model">voyage.vacance</field>
-      <field name="arch" type="xml">
-        <form string="Voyage">
-        <sheet>
-          <div class="oe_title">
-              <h1>
-                <field name="name" readonly="1"/>
-              </h1>
-            </div>
-          <group>
-            <group>
-              <field name="person_name"/>
-              <field name="trajet"/>
-              <field name="nature"/>
-            </group>
-            <group>
-              <field name="date_a"/>
-              <field name="date_r"/>
-
-            </group>
-          </group>
-          <group>
-            <group></group>
-            <group class="oe_subtotal_footer">
-              <field name="montant_b" widget="monetary"/>
-              <field name="montant_bm" widget="monetary"/>
-              <field name="montant_bmt" widget="monetary"/>
-              <field name="montant_total" widget="monetary"/>
-            </group>
-            <field name="currency_id" invisible="1"/>
-          </group>
-        </sheet>
-          <div class="oe_chatter">
-            <field name="message_follower_ids" widget="mail_followers"/>
-            <field name="message_ids" widget="mail_thread"/>
-          </div>
-        </form>
-      </field>
-    </record>
-
-    <!-- action voyage vacance -->
-    <record model="ir.actions.act_window" id="voyage_vacance_action_window">
-      <field name="name">Voyage Vacance</field>
-      <field name="res_model">voyage.vacance</field>
-      <field name="view_id" ref="mission_voyage_vacance_treeview"/>
-      <field name="view_mode">tree,form</field>
-    </record>
-
-    <menuitem name="Voyage Vacance" id="be_menu_voyage_vacance" parent="be_mission_report_teckit" action="voyage_vacance_action_window"/>
 
   </data>
 </odoo>
